# Watcher3

./: .gitignore  Dockerfile  Dockerfile.aarch64  Dockerfile.armhf  README.md  license.txt  pyproject.toml  watcher.py
.github/: pull.yml
Docker/: Dockerfile  Dockerfile.aarch64  Dockerfile.armhf  entrypoint.sh
Docker/hooks/: pre_build
core/: __init__.py  ajax.py  api.py  app.py  base_config.cfg  conf_app.ini  config.py  helpers.py  library.py  movieinfo.py  postprocessing.py  scheduler.py  searcher.py  searchresults.py  snatcher.py  sqldb.py  trakt.py
core/downloaders/: BlackHole.py  DelugeRPC.py  DelugeWeb.py  QBittorrent.py  Transmission.py  rTorrentHTTP.py  rTorrentSCGI.py
core/providers/: base.py  torrent.py
core/providers/torrent_modules/: 1337x.py  danishbits.py  limetorrents.py  rarbg.py  thepiratebay.py  torrentdownloads.py  torrentgalaxy.py  torrentz2.py  yts.py  zooqle.py
core/rss/: imdb.py  popularmovies.py  predb.py
lib/: mods.txt
lib/PTN/: parse.py  patterns.py
static/css/: 404.css  add_movie.css  style.css
static/css/lib/: materialdesignicons.min.css  materialdesignicons.min.css.map
static/css/settings/: categories.css  downloader.css  languages.css  (+1 more)
static/js/: add_movie.js  login.js  shared.js  system.js
templates/: 404.html  add_movie.html  head.html  login.html  navbar.html
templates/settings/: categories.html  downloader.html  indexers.html  languages.html  logs.html  plugins.html  postprocessing.html  search.html  server.html  system.html
templates/system/: restart.html  shutdown.html  update.html
tests/: test_PTN.py
(+21 files in other folders)
